--- a/TY666666/容大300576/容大感光300576.md
+++ b/TY666666/容大300576/容大感光300576.md
@@ -3,3 +3,6 @@
 今天下午的操作：容大感光在冲高至28.8元时减仓，T回时机在[公告]不及预期的[创业板年报]预告当天；长信科技在10.84元继续加仓，所有创业板年报预告会符合我的预期，1季报会有惊喜。创业板公司必须在1月31日前强制披露年报预告，我只是妄加猜测，如有雷童，纯属巧合。
 [如何看年报？](https://www.zhihu.com/question/28511825/answer/720589376)
 [上市公司年报360度拆解](https://www.zhihu.com/lives/997529878077435904)
+
+# 200221
+- $容大感光(SZ300576)$ 温馨提示：容大感光一般人跟不了的，不要去刀头舔血，主力凶狠。
