--- a/TradeLog/长亮科技300348.md
+++ b/TradeLog/长亮科技300348.md
@@ -4,36 +4,42 @@
 
 ## 200214    
 ### <font color=red>27.99(+500)</font>
-- 05，首次回踩MA5，是买点；
+05，首次回踩MA5，是买点；
 
 ## 200217    
 ### <font color=red>28.36(+400)</font>
-- 仍在MA5附近，考虑到目前仓位较低，故增加部分仓位以免踏空
+仍在MA5附近，考虑到目前仓位较低，故增加部分仓位以免踏空
 
 ## 200219
 ### <font color=red>28.5(+1100)</font>
-- 仓位过低，集合竞价买入
+仓位过低，集合竞价买入
 ### <font color=red>28.27(+500)</font>
-- MA5价格28.3挂买，低吸
+MA5价格28.3挂买，低吸
 ### <font color=red>28.2(+500)</font>
-- MA5价格28.2挂买，低吸
+MA5价格28.2挂买，低吸
 ### <font color=red>28.01(+500)</font>
-- 低吸补仓
+低吸补仓
 
 ## 200820
 ### <font color=green>28.5(-1000)</font>
 ### <font color=green>28.81(-1000)</font>
 ### <font color=green>29.05(-1000)</font>
-- 按27-29箱体(前几天的震荡范围)高抛，降低成本，控制仓位。虽然童大是满仓待涨，但是考虑到两个因素：
-    1. 他成本比我们低，现在的波动对他来说只是赚多赚少，对我来说加仓后成本已经去到28+，所以需要降成本，抛出后已降到27.84；
-    2. 担心主力针对童言延长洗盘时间，加大洗盘力度，我们刚入市，心理承受能力没那么强，需要留点后手；  
-- 尾盘拉升至29.68，看来卖早了，总结一下，从日K来看，长亮比长信股性活跃，盘子也相对小一些，所以拉升可能会比长信来的更早，所以做T仓位可以适当减少
+按27-29箱体(前几天的震荡范围)高抛，降低成本，控制仓位。虽然童大是满仓待涨，但是考虑到两个因素：
+- 他成本比我们低，现在的波动对他来说只是赚多赚少，对我来说加仓后成本已经去到28+，所以需要降成本，抛出后已降到27.84；
+- 担心主力针对童言延长洗盘时间，加大洗盘力度，我们刚入市，心理承受能力没那么强，需要留点后手；  
+尾盘拉升至29.68，看来卖早了，总结一下，从日K来看，长亮比长信股性活跃，盘子也相对小一些，所以拉升可能会比长信来的更早，所以做T仓位可以适当减少
 
 ## 200821
 ### 交易计划
 挂买 28.11(300)  
 挂卖 29.11(300) 
-
 ### <font color=green>29.11(-300)</font>
-
 感觉还要盘整几天，按28-29.5箱体高抛低吸
+
+## 200824
+### 交易计划
+前一个交易日长亮最高29.78冲击新高30.11未果，有可能继续冲击或突破新高；  
+同时近9个交易日K线紧贴布林线上轨下方运行，也有可能盘整至中轨；
+考虑到目前仓位(10w)并不高，应当以低吸为主，若无机会则持股不动。   
+低吸价位参考前两个交易日的振幅低点(27.16-28.36)
+挂买 28.36(500), 28.06(500), 27.76(500), 27.46(500), 27.16(500)
