--- a/TradeLog/长信科技300088.md
+++ b/TradeLog/长信科技300088.md
@@ -41,17 +41,20 @@
 ### <font color=green>13.29(-1000)</font>
 ### <font color=green>13.43(-1000)</font>
 ### <font color=green>13.49(-1000)</font>
-- 按13-13.6箱体高抛，降低成本，控制仓位。虽然童大是满仓待涨，但是考虑到两个因素：
-    1. 他成本比我们低，现在的波动对他来说只是赚多赚少，对我来说加仓后成本已经去到13，所以需要降成本，抛出后已降到12.84；
-    2. 担心主力针对童言延长洗盘时间，加大洗盘力度，我们刚入市，心理承受能力没那么强，需要留点后手；
+按13-13.6箱体高抛，降低成本，控制仓位。虽然童大是满仓待涨，但是考虑到两个因素：
+- 他成本比我们低，现在的波动对他来说只是赚多赚少，对我来说加仓后成本已经去到13，所以需要降成本，抛出后已降到12.84；
+- 担心主力针对童言延长洗盘时间，加大洗盘力度，我们刚入市，心理承受能力没那么强，需要留点后手；
 所以抛出30，持仓101
 
 ## 200221
-
 ### 交易计划
-
-挂买 13.79(500)  
-挂卖 13.98(500) 
-
+挂卖 13.79(500) 13.98(500) 
 ### <font color=green>13.79(-1000)</font>
 
+## 200224
+### 交易计划
+> 如果能看懂布林线这一技术指标喇叭口已经展开的前瞻意义，目前的BOLL上轨已经创出历史新高了，可能就在明天长信科技股价会触碰13.8元。
+> 长信科技下周只要盯着13.8元即可，14.4元箱顶可以无视，一旦发力，直接我的第一目标15元就完成了，第二目标18元。
+上面是童颜的分析。  
+个人判断现在长信股价突破新高，均线也呈多头状态，后续看涨概率较大，洗盘概率较小，考虑到目前仓位(12w)并不高，应当以低吸为主，若无机会则持股不动。
+挂买 13.35(1000) 13.25(1000) 13.15(1000) 13.05(1000) 12.95(1000) 
