--- a/TradeLog/容大感光300576.md
+++ b/TradeLog/容大感光300576.md
@@ -12,3 +12,8 @@
 ### <font color=green>35.33(-500)</font>
 冲高回落震荡洗盘，网格低吸高抛
 
+## 200224
+### 交易计划
+童大说了，主力凶猛，且之前天量天价，回落后重新拉升，个人以为是为了抬高市场成本，故以上个交易日收盘价清仓，最低价挂买尝试接回。
+挂买 32.09(1000)
+挂卖 35.99(1000)
