--- a/TradeLog/容大感光300576.md
+++ b/TradeLog/容大感光300576.md
@@ -17,3 +17,5 @@
 童大说了，主力凶猛，且之前天量天价，回落后重新拉升，个人以为是为了抬高市场成本，故以上个交易日收盘价清仓，最低价挂买尝试接回。
 挂买 32.09(1000)
 挂卖 35.99(1000)
+### <font color=green>37.55(-1000)</font>
+早上的计划忘记挂单了，正好又涨高了些，就清仓先
