--- a/TradeLog/长亮科技300348.md
+++ b/TradeLog/长亮科技300348.md
@@ -43,3 +43,15 @@ MA5价格28.2挂买，低吸
 考虑到目前仓位(10w)并不高，应当以低吸为主，若无机会则持股不动。   
 低吸价位参考前两个交易日的振幅低点(27.16-28.36)
 挂买 28.36(500), 28.06(500), 27.76(500), 27.46(500), 27.16(500)
+### <font color=red>37.79(+1700)</font>
+早盘长亮随创业板一起攀升且突破新高，童大也说了第一目标达到后，第二目标40元到达之前不减仓，故撤掉昨天的挂单，重新买入
+
+## 200225
+### 交易计划
+准备找机会继续加大仓位，以便达到科创板的要求，后期出机会可以跟长阳
+### <font color=red>29.7(+2000)</font>
+低开买入加仓
+### <font color=red>29.19(+1000)</font>
+### <font color=red>28.5(+1000)</font>
+### <font color=red>28(+1000)</font>
+低吸
