--- a/TradeLog/长信科技300088.md
+++ b/TradeLog/长信科技300088.md
@@ -58,3 +58,17 @@
 上面是童颜的分析。  
 个人判断现在长信股价突破新高，均线也呈多头状态，后续看涨概率较大，洗盘概率较小，考虑到目前仓位(12w)并不高，应当以低吸为主，若无机会则持股不动。
 挂买 13.35(1000) 13.25(1000) 13.15(1000) 13.05(1000) 12.95(1000) 
+### <font color=red>13.6(+2000)</font>
+创业板一直走强，感觉目前行情下总仓位还是偏低，长信微跌时买入部分仓位
+
+## 200225
+### 交易计划
+准备找机会继续加大仓位，以便达到科创板的要求，后期出机会可以跟长阳
+### <font color=red>13.4(+2000)</font>
+低开加仓
+### <font color=red>13.66(+2000)</font>
+### <font color=red>13.4(+2000)</font>
+继续加仓，给后面做T降成本留空间
+### <font color=red>13.16(+2000)</font>
+### <font color=red>12.8(+2000)</font>
+低吸
