--- a/TradeLog/长川科技300604.md
+++ b/TradeLog/长川科技300604.md
@@ -3,3 +3,9 @@
 ### <font color=red>34.05(+500)</font>
 
 处于上升通道中，创新高后连续三天缩量回调至MA5，用容大和长信T出资金建仓入场
+
+## 200225
+### 交易计划
+准备找机会继续加大仓位，以便达到科创板的要求，后期出机会可以跟长阳
+### <font color=red>35.23(+2000)</font>
+回调低吸
