--- a/TradeLog/寒锐钴业300618.md
+++ b/TradeLog/寒锐钴业300618.md
@@ -9,3 +9,6 @@
 准备找机会继续加大仓位，以便达到科创板的要求，后期出机会可以跟长阳
 ### <font color=red>68.3(+1000)</font>
 前面已经连跌5天了，跌至19年底68元平台，有可能是个黄金坑，所以考虑低吸一波建底仓，但现在看来，前一天跌了9个点，且成交量巨大，并不一定到底（不是地量地价）所以这波操作还是有点冒险，虽然按收盘价看来赌对了
+
+## 200226
+无操作，早盘挂高开3%卖单未成，在今天恐慌性下跌的市场氛围中，只是缩量小跌，且仓位不大，就先持有不动
