--- a/TradeLog/长亮科技300348.md
+++ b/TradeLog/长亮科技300348.md
@@ -55,3 +55,17 @@ MA5价格28.2挂买，低吸
 ### <font color=red>28.5(+1000)</font>
 ### <font color=red>28(+1000)</font>
 低吸
+
+## 200226
+### 交易计划
+早上看到报道说由于世界范围内疫情扩散加剧，美股大跌1%，想到今天可能会延续昨天走势，继续下跌，但是想到昨天探底回升，明显有资金托底，所以决定开盘挂了几个网格高开卖单，等到下跌时再买。
+### <font color=red>28.03(+1000)</font>
+### <font color=red>28(+1000)</font>
+### <font color=red>27.41(+1000)</font>
+### <font color=red>27.46(+1000)</font>
+### <font color=red>27.16(+1000)</font>
+### <font color=red>27.17(+1000)</font>
+低吸
+### 总结
+中盘创业板恐慌性大幅下挫，持有几只股票接近或跌停，说实话吸的心里很虚，不过看盘后童言发的操作，貌似不算太错，童言应该是没有什么仓位，所以等到跌停才补仓
+> 回复@童言无忌666666: 今天2月26日下午创业板个股恐慌时我的收盘前操作：长川科技在跌停板32.85元将一早集合竞价35.77元的买回；长亮科技在跌停板27.11元补仓，目前已有浮盈；长阳科技在收盘集合竞价25.4元加仓；
