--- a/TradeLog/长信科技300088.md
+++ b/TradeLog/长信科技300088.md
@@ -72,3 +72,24 @@
 ### <font color=red>13.16(+2000)</font>
 ### <font color=red>12.8(+2000)</font>
 低吸
+
+## 200226
+### 交易计划
+早上看到报道说由于世界范围内疫情扩散加剧，美股大跌1%，想到今天可能会延续昨天走势，继续下跌，但是想到昨天探底回升，明显有资金托底，所以决定开盘不卖，等到下跌时再买。
+### <font color=red>12.93(+2000)</font>
+### <font color=red>12.88(+2000)</font>
+### <font color=red>12.78(+2000)</font>
+### <font color=red>12.65(+2000)</font>
+### <font color=red>12.61(+2000)</font>
+### <font color=red>12.41(+2000)</font>
+一直下跌一直低吸，打算后面反弹的时候再高抛出去
+### <font color=green>12.34(-10400)</font>
+中盘创业板大幅下挫引发恐慌情绪，持有几只股票接近或跌停，14:30的时候童言发了下面的消息，于是纠结之后抛出1／3仓位：一顿操作猛如虎，算算净亏三千五！交学费交学费
+> 回复@童言无忌666666: 均线实战篇第四条。//@童言无忌666666:回复@天野A:记住我的均线实战篇：一.创出新高回落5日线就是买点。二.再次冲击新高不过，回落5日线宜观望。三.收盘有效跌破5日线会去触碰10日线。四.20日线是多头的生命线，收盘跌破无条件减仓。五.股价连续回落到60日线会出现正常反抽，从20日线减仓的可以根据量能在60日线T回，反弹无量可5日线高抛。六.半年线和年线都是成长投资者主动买套的阶段买点，错杀终有纠错时。七.5周线是走上升通道或主升浪个股的中线买点，一般不会轻易跌破，跌破须谨慎。八.多头排列的5月线是长线价值投资者的首选参与点位，择时说的就是这个长线买点。九.均线分析并不是投资的第一参考，个股的基本面分析和财报数据才是价值投资的第一选股要素。如果不能学以致用，我就算每天分析，你还是会一头雾水！
+### 总结
+抛完心里很慌，接着收盘后就看到了童言又发了下半句，原来上面的话没说完
+> 回复@童言无忌666666: 今天2月26日下午创业板个股恐慌时我的收盘前操作：长川科技在跌停板32.85元将一早集合竞价35.77元的买回；长亮科技在跌停板27.11元补仓，目前已有浮盈；长阳科技在收盘集合竞价25.4元加仓；  
+> **长信科技20日多头生命线失守，原则上短线按第四条要无条件减仓，但我是中长线持股，看的是第七条，还有两天，5周线如果跌破我是会大幅减仓的，然后再看第八条，5月线我是会积极参与的。最后看第九条，1季报的财务数据才是我是否拿到2021年的关键！现在写这么多，就是想让大家知道，你要跟的不是我的操作，而是你到底是中长线投资还是在短线投机，长期投资的看最后4条，短线客看前面5条，自己只想赚钱不想动脑的，那就看你自己的临场应变能力了**。
+
+另外童言早盘也加仓了长信，说明他也没想到下午的恐慌性暴跌
+> $长信科技(SZ300088)$ 今天2月20日上午的操作：如果要调仓换股，就减仓年度涨幅高的，加仓年度涨幅小的，在集合竞价35.77元和35.7元将长川科技大幅减仓，继续在12.82元和12.85元加仓本月涨幅最少的长信科技。
