--- a/TradeLog/长川科技300604.md
+++ b/TradeLog/长川科技300604.md
@@ -9,3 +9,11 @@
 准备找机会继续加大仓位，以便达到科创板的要求，后期出机会可以跟长阳
 ### <font color=red>35.23(+2000)</font>
 回调低吸
+
+## 200226
+### 总结
+今日无操作，开盘前因为看到美股下跌1%，其实我是有挂卖的想法，但是因为入场点高，这样就等于没有赚到，所以就没有动；等到盘中下跌5%时看到童言大幅减仓的消息，感觉现在卖就亏了，所以又没有动；盘尾就跌停了。  
+反思之所以会有这样的想法，主要是因为两点：1.高位入场，高风险低利润；2.没有做大概率的事情，看到美股下跌就应该作出相应的对策，而不是贪恋利润或者不愿亏损。好在最后童言又T回来了，我也就继续拿着，相当于损失了一个T。  
+并且可以看出，做T用10%仓位应该指的是上升通道中的情形，像这种危险信号较强烈的情况，可以考虑加大做T仓位，不过童颜之所以大幅减仓做T，也是因为他满仓了，要更加重仓长信。
+> $长信科技(SZ300088)$ 今天2月20日上午的操作：如果要调仓换股，就减仓年度涨幅高的，加仓年度涨幅小的，在集合竞价35.77元和35.7元将长川科技大幅减仓，继续在12.82元和12.85元加仓本月涨幅最少的长信科技。
+> 回复@童言无忌666666: 今天2月26日下午创业板个股恐慌时我的收盘前操作：长川科技在跌停板32.85元将一早集合竞价35.77元的买回；
