--- a/TradeLog/History/长亮科技300348.md
+++ b/TradeLog/History/长亮科技300348.md
@@ -69,3 +69,15 @@ MA5价格28.2挂买，低吸
 ### 总结
 中盘创业板恐慌性大幅下挫，持有几只股票接近或跌停，说实话吸的心里很虚，不过看盘后童言发的操作，貌似不算太错，童言应该是没有什么仓位，所以等到跌停才补仓
 > 回复@童言无忌666666: 今天2月26日下午创业板个股恐慌时我的收盘前操作：长川科技在跌停板32.85元将一早集合竞价35.77元的买回；长亮科技在跌停板27.11元补仓，目前已有浮盈；长阳科技在收盘集合竞价25.4元加仓；
+
+## 200227
+### 交易计划
+减仓，仓位过大，带来两个后果：
+1. 下跌带来心理压力过大
+2. 这笔钱还有他用，即并非可以用作长线的无压力资金，对浮亏的承受力小
+### <font color=green>26.45(-15000)</font>
+减仓在洗盘的最低点，跟着就出了业绩快报，然后尾盘拉升，无语
+
+## 200228
+### <font color=green>26.05(-1000)</font>
+美股大跌，A股大跌，因为要买房，无法承担更大浮亏，清仓
