--- a/TradeLog/History/长信科技300088.md
+++ b/TradeLog/History/长信科技300088.md
@@ -93,3 +93,7 @@
 
 另外童言早盘也加仓了长信，说明他也没想到下午的恐慌性暴跌
 > $长信科技(SZ300088)$ 今天2月20日上午的操作：如果要调仓换股，就减仓年度涨幅高的，加仓年度涨幅小的，在集合竞价35.77元和35.7元将长川科技大幅减仓，继续在12.82元和12.85元加仓本月涨幅最少的长信科技。
+
+## 200227
+### <font color=green>11.34(-26500)</font>
+美股大跌，A股大跌，因为要买房，无法承担更大浮亏，清仓
