--- a/TradeLog/模拟盘200301.md
+++ b/TradeLog/模拟盘200301.md
@@ -1,4 +1,4 @@
-# 200228
+# 200302
 ## 300088
 大盘局势不明朗，仓位也足够，开盘振幅也不大，暂时持仓不动，盘中高位做T
 ## 600143
@@ -11,3 +11,14 @@
 `24.7 +1000`
 `25.21 +1000`
 缩量下跌至MA30附近，早盘十字星，个人认为回调已到位
+
+# 200303
+## 300088
+昨天一个缩量十字星止跌，感觉资金在观望，今天早盘又一个十字星，于是准备11.52T出500再挂11.33T回，结果手残T出1000
+*11.52 -1000*  
+## 300348
+仓位也不大，早盘拉升良好，持仓不动
+## 688299 
+仓位也不大，早盘拉升良好，26.82T出500再挂26.3T回
+## LX
+看起来T反了，上涨趋势，应该先买后卖，下跌趋势，应该先卖后买
