--- a/TradeLog/模拟盘200301.md
+++ b/TradeLog/模拟盘200301.md
@@ -14,7 +14,7 @@
 
 # 200303
 ## 300088
-昨天一个缩量十字星止跌，感觉资金在观望，今天早盘又一个十字星，于是准备11.52T出500再挂11.33T回，结果手残T出1000
+T0,昨天一个缩量十字星止跌，感觉资金在观望，今天早盘又一个十字星，于是准备11.52T出500再挂11.33T回，结果手残T出1000
 *11.52 -1000*  
 `11.36 +500`
 ## 300348
@@ -23,3 +23,36 @@
 仓位也不大，早盘拉升良好，26.82T出500再挂26.3T回
 *26.82 -500*   
 `26.30 +500`   
+
+# 200304
+## 300088
+没啥说的，长线持有，越跌越买
+`11.0 +2000`
+## 300348
+T0,美股大跌，开盘挂卖，盘中买回
+*26.82 -500*
+`26.53 +500`
+## 688299
+T1,午盘加仓，尾盘拉升T出
+`25.58 +500`
+*25.94 -500*
+## 600298
+封城好多人买酵母，买着玩
+`31.76 +100`
+
+# 200305
+## 300088
+长信目前看来还在洗盘中，而且不知道要调整多久，将昨天11元增加的仓位，11.3T出，腾出部分仓位给其他更加活跃的品种
+*11.3 -2000*  
+## 300348
+T0,长亮最近一直在MA20和MA30之间运动，并没有跌破，所以也不敢T出太多
+*27.2 -300*
+`26.8 +300`
+`26.6 +200`
+## 000538
+李佳林的票，初步建仓观察
+`80.82 +300`
+## 600143
+> TY:再说一次，金发科技只要能有效突破7-11元箱体的11元箱顶就可重仓，目标19元，现在只看不动就可以了。
+收盘站稳再加仓，先建观察仓
+`11.25 +100`
