--- a/TradeLog/模拟盘200301.md
+++ b/TradeLog/模拟盘200301.md
@@ -64,6 +64,8 @@ T0,长亮最近一直在MA20和MA30之间运动，并没有跌破，所以也不
 ## 长信
 外围大跌，早上又看到22文章说创业板碰到上方两根压力线，跟自己昨天的判断一样，于是果断挂跌停清仓，想等回落后再接回，结果没想到一T就拉，真他妈的
 *10.89 -7000*
+早上低开后立刻有大单拉高，感觉是有资金在托底，保证不破MA60太多，所以尾盘把剩下的钱买回
+`11.09 +1000`
 ## 长阳
 长信卖飞了，长阳处在低位，低吸，看看能不能高抛，但是吸完发现已经低开跌破MA30，好像破位了，有点怕怕  
 `24.88 +1000`  
