--- a/TradeLog/模拟盘200301.md
+++ b/TradeLog/模拟盘200301.md
@@ -1,90 +1,90 @@
 # 200302
 ## 长信
 大盘局势不明朗，仓位也足够，开盘振幅也不大，暂时持仓不动，盘中高位做T
-## 金发
-*10.7 -2000*   
+## 金发  
+<font color=green>10.7 -2000</font>     
 金发主营口罩材料，前几日逆势上得受益于国外疫情，个人认为偏向于短期行情，前几个交易日放巨量冲击新高未果，今日早盘重新冲击新高回落，风险加大，暂时高抛止盈，待调整后低吸重新建仓，再转向中长期行情
-## 长亮
-`25.2 +1000`
+## 长亮  
+<font color=red>5.2 +1000</font>    
 缩量下跌至MA30和MA60之间，早盘十字星，开始建仓
-## 长阳
-`24.7 +1000`
-`25.21 +1000`
+## 长阳  
+<font color=red>4.7 +1000</font>      
+<font color=red>5.21 +1000</font>    
 缩量下跌至MA30附近，早盘十字星，个人认为回调已到位
 
 # 200303
 ## 长信
-T0,昨天一个缩量十字星止跌，感觉资金在观望，今天早盘又一个十字星，于是准备11.52T出500再挂11.33T回，结果手残T出1000
-*11.52 -1000*  
-`11.36 +500`
+T0,昨天一个缩量十字星止跌，感觉资金在观望，今天早盘又一个十字星，于是准备11.52T出500再挂11.33T回，结果手残T出1000  
+<font color=green>11.52 -1000</font>      
+<font color=red>11.36 +500</font>    
 ## 长亮
 仓位也不大，早盘拉升良好，持仓不动
 ## 长阳 
-仓位也不大，早盘拉升良好，26.82T出500再挂26.3T回
-*26.82 -500*   
-`26.30 +500`   
+仓位也不大，早盘拉升良好，26.82T出500再挂26.3T回  
+<font color=green>26.82 -500</font>       
+<font color=red>6.30 +500</font>       
 
 # 200304
 ## 长信
-没啥说的，长线持有，越跌越买
-`11.0 +2000`
+没啥说的，长线持有，越跌越买  
+<font color=red>11.0 +2000</font>    
 ## 长亮
-T0,美股大跌，开盘挂卖，盘中买回
-*26.82 -500*
-`26.53 +500`
+T0,美股大跌，开盘挂卖，盘中买回  
+<font color=green>26.82 -500</font>    
+<font color=red>6.53 +500</font>    
 ## 长阳
-T1,午盘加仓，尾盘拉升T出
-`25.58 +500`
-*25.94 -500*
+T1,午盘加仓，尾盘拉升T出    
+<font color=red>5.58 +500</font>      
+<font color=green>25.94 -500</font>  
 ## 安琪酵母
-封城好多人买酵母，买着玩
-`31.76 +100`
+封城好多人买酵母，买着玩  
+<font color=red>31.76 +100</font>    
 
 # 200305
 ## 长信
-长信目前看来还在洗盘中，而且不知道要调整多久，将昨天11元增加的仓位，11.3T出，腾出部分仓位给其他更加活跃的品种
-*11.3 -2000*  
+长信目前看来还在洗盘中，而且不知道要调整多久，将昨天11元增加的仓位，11.3T出，腾出部分仓位给其他更加活跃的品种  
+<font color=green>11.3 -2000</font>    
 ## 长亮
-T0,长亮最近一直在MA20和MA30之间运动，并没有跌破，所以也不敢T出太多
-*27.2 -300*
-`26.8 +300`
-`26.6 +200`
+T0,长亮最近一直在MA20和MA30之间运动，并没有跌破，所以也不敢T出太多  
+<font color=green>27.2 -300</font>    
+<font color=red>6.8 +300</font>      
+<font color=red>6.6 +200</font>    
 ## 云南白药
-李佳林的票，初步建仓观察
-`80.82 +300`
+李佳林的票，初步建仓观察  
+<font color=red>80.82 +300</font>    
 ## 金发
 > TY:再说一次，金发科技只要能有效突破7-11元箱体的11元箱顶就可重仓，目标19元，现在只看不动就可以了。
-收盘站稳再加仓，先建观察仓
-`11.25 +100`
+收盘站稳再加仓，先建观察仓  
+<font color=red>11.25 +100</font>    
 ## LX
 长亮T回早了，而且长信／长阳都应该做T0，因为从创业板指来看，今天高开后正好触碰2.21-2.27头部压力区，所以是有可能突破不成然后回落的。
 相反安琪／金发非创业板股，且处于即将突破的状态，所以并没有高开低走
 
 # 200306
 ## 长信
-外围大跌，早上又看到22文章说创业板碰到上方两根压力线，跟自己昨天的判断一样，于是果断挂跌停清仓，想等回落后再接回，结果没想到一T就拉，真他妈的
-*10.89 -7000*
-早上低开后立刻有大单拉高，感觉是有资金在托底，保证不破MA60太多，所以尾盘把剩下的钱买回
-`11.09 +1000`
+外围大跌，早上又看到22文章说创业板碰到上方两根压力线，跟自己昨天的判断一样，于是果断挂跌停清仓，想等回落后再接回，结果没想到一T就拉，真他妈的  
+<font color=green>10.89 -7000</font>  
+早上低开后立刻有大单拉高，感觉是有资金在托底，保证不破MA60太多，所以尾盘把剩下的钱买回  
+<font color=red>11.09 +1000</font>    
 ## 长阳
-长信卖飞了，长阳处在低位，低吸，看看能不能高抛，但是吸完发现已经低开跌破MA30，好像破位了，有点怕怕  
-`24.88 +1000`  
+长信卖飞了，长阳处在低位，低吸，看看能不能高抛，但是吸完发现已经低开跌破MA30，好像破位了，有点怕怕    
+<font color=red>4.88 +1000</font>      
 挂25.45高抛  
-~~25.45 -1000~~
-高抛个蛋蛋，跟着童大减仓  
-`24.55 -2000`  
+~~25.45 -1000~~  
+高抛个蛋蛋，跟着童大减仓    
+<font color=red>4.55 -2000</font>      
 ## 金发
-昨天放量突破大箱体，童颜说进入11-18大箱体，本来可以少加一点的，但是长信卖飞了，正好现在市场又不明朗，所以就当调仓换股了，重仓之
-`11.63 +2000`
+昨天放量突破大箱体，童颜说进入11-18大箱体，本来可以少加一点的，但是长信卖飞了，正好现在市场又不明朗，所以就当调仓换股了，重仓之  
+<font color=red>11.63 +2000</font>    
 ## 长亮
-连续一周缩量调整，目前在MA30下方，长信卖飞了，低吸  
-`26.11 +500`  
-`25.9 +1000`  
+连续一周缩量调整，目前在MA30下方，长信卖飞了，低吸    
+<font color=red>6.11 +500</font>        
+<font color=red>5.9 +1000</font>      
 挂26.65高抛  
 ~~26.65 -200~~
 ## 科沃斯
-李佳林的票，初步建仓观察  
-`23.99 +500`
+李佳林的票，初步建仓观察    
+<font color=red>3.99 +500</font>    
 
 ## TY
 仓位管控在于当你无法确知股市未来走向而采取应对的一种进可攻退可守的方法，比如像今年突如其来的全球新冠疫情使得股市出现大幅波动，特别是近期很多科技类个股出现获利回吐连续下跌，那应该如何应对呢？我想可以通过像我前期这样，对手上持有个股对疫情的影响分析，用仓位调整来应对——估值低且公司产品对疫情有利好或无视的，可以增加仓位，像**金发科技和长亮科技**；价值依然低估但技术面已出现技术破位的，可以通过降低仓位，并不断高抛低吸来降低自己的持股成本，等待2020年业绩从质疑到明牌后再次重仓的机会，像**长信科技**；对于前期已大幅拉高且估值较高个股，可以大幅减少仓位锁定利润并将资金配置进入有利好个股，像**长阳科技和长川科技**。这时候，千万不要把鸡蛋放在一只篮子里进行豪赌，否则一旦研判不准或主力资金借题材利好拉高出货的话，可能会受到重创或灭顶之灾。 此外，自己的投资理念和风险承受能力也是控制仓位的参考之一，如果目标是短线，就可以根据大资金流入追近阶段的板块热点和龙头个股，但必须设置好止损点，千万不要从投机做成了股东；如果你打算做长线，那就守住个股的基本面和财务数据，对确定有投资价值的股票，在股价急跌的时候少量加仓，在股价急升的时候落袋为安，这就是我最擅长的“看长做短”，等待确定性的买点出现，也是比较明智的一种控仓办法，但对盘感和技术的要求较高。
