--- a/TradeLog/模拟盘200301.md
+++ b/TradeLog/模拟盘200301.md
@@ -87,14 +87,15 @@ T0,长亮最近一直在MA20和MA30之间运动，并没有跌破，所以也不
 <font color=red>23.99 +500</font>     
 ## LX
 ### 长信反向操作
-今天最大的操作失误，在于开盘前集合竞价跌停清仓长信，马后炮分析一下：
+今天最大的操作失误，在于开盘前集合竞价挂跌停清仓长信，马后炮分析一下：
 1. 外围确实大跌，但是相比上周首次暴跌，幅度已经小了很多，而且上次外围暴跌前市场情绪有点狂热，突然暴跌会引发的恐慌，而经过一周的调整，恐慌情绪已经释放了，现在市场趋于谨慎，应该不会再像上周那样大跌；
-2. *创业板方面就盯着下面这条保护线，现在这个位置的重要性由于20日线的缓慢上移已经接近重叠了，20日就是行情的分水岭，跌破离场没商量。* 以上是22的原话，结合创业板日K可以看到，即便今天低开，开盘点离他划的保护线以及MA20还有20个点位的距离，同时他的话说的很灵活，说明后续行情并不一定，没必要过于恐慌。
+2. *创业板方面就盯着下面这条保护线，现在这个位置的重要性由于20日线的缓慢上移已经接近重叠了，20日就是行情的分水岭，跌破离场没商量。*   
+以上是22的原话，结合创业板日K可以看到，即便今天低开，开盘点离他划的保护线以及MA20还有20个点位的距离，同时他的话说的很灵活，说明后续行情并不一定，没必要过于恐慌。
 3. 童言均线理论第五条：**股价连续回落到60日线会出现正常反抽，从20日线减仓的可以根据量能在60日线T回，反弹无量可5日线高抛**，长信这几天一路跌至MA60-MA5附近洗盘震荡，非常符合这一条的描述，应该是买回点（基于长信的基本面），所以不应该清仓，就算想大幅做T，也不应该用全部仓位；而考虑到可能会出现的**正常反抽**,更不应该做T0，而应该是T1，没有仓位就等着涨了之后再T出。
 ### 金发和长阳
 另一个小失误是，长信卖掉空出的仓位，买了一半的长阳，一半的金发。从下面童言的分析可以看到：
-- 本次疫情明显利好金发，且估值偏低，技术面又刚刚突破新高空间很大，显然是更好的选择；
-- 相比之下长阳估值偏高，且疫情对之不利，加上短线形态也走坏，比金发差了不少。另外估值偏高这一点完全没有意识到，还停留在童颜之前给出的结论（低估值+科创板后续爆发），自己没有去实际了解掌握相关数据，且黑天鹅后科创板的爆发明显将被延后，应当及时更新判断。
+- 本次疫情明显利好金发，且估值偏低(PE33)，技术面又刚刚突破新高空间很大，显然是更好的选择；
+- 相比之下长阳估值偏高(PE51)，且疫情对之不利，加上短线形态也走坏，比金发差了不少。另外估值偏高这一点完全没有意识到，还停留在童颜之前给出的结论（低估值+科创板后续爆发），自己没有去实际了解掌握相关数据，且黑天鹅后科创板的爆发明显将被延后，应当及时更新判断。
 ## TY
 仓位管控在于当你无法确知股市未来走向而采取应对的一种进可攻退可守的方法，比如像今年突如其来的全球新冠疫情使得股市出现大幅波动，特别是近期很多科技类个股出现获利回吐连续下跌，那应该如何应对呢？我想可以通过像我前期这样，对手上持有个股对疫情的影响分析，用仓位调整来应对：  
 - 估值低且公司产品对疫情有利好或无视的，可以增加仓位，像**金发科技和长亮科技**；
